# yesstess

./: .jekyll-metadata  .replit  404.html  Gemfile  _config.yml  _config_dev.yml  index.html  navigation  package.json  pyproject.toml  replit.md  replit.nix  search.html  search.json  test-generator.py
Article/: .nojekyll  README.md  README_WORKFLOW.md  UpdateArticle.py  deployment_guide.md  manual_test.py
_data/: navigation.yml
_includes/: adsense-in-article.html  advertisement.html  footer.html  head.html  header-adsense.html  header.html  meta-tags.html  pagination.html  performance-scripts.html  popup-ads.html  post-card.html  reading-time.html  related-posts.html  resource-hints.html  responsive-image.html  search-live.html  search.html  sidebar.html  social-share.html  toc.html  webp-image.html
_layouts/: category.html  default.html  home.html  post.html  tag.html
_pages/: about.md  archive.md  contact.md  cookie-policy.md  disclaimer.md  documentation.md  privacy-policy.md  sitemap.md  terms-of-service.md
_plugins/: cloudflare_deploy.rb  cloudflare_optimizer.rb  performance_boost.rb
_posts/: 2025-01-01-welcome-to-my-blog.md  2025-01-02-getting-started-with-jekyll.md  2025-01-03-customizing-your-blog.md  2025-01-04-home-design-inspiration.md  2025-01-05-kitchen-renovation-tips.md
_sass/: _adsense.scss  _image-effects.scss  _layout.scss  _pagination.scss  _post-card.scss  _posts.scss  _search.scss  _sidebar.scss  _toc.scss  main.scss
_site/: 404.html  CLOUDFLARE_SECRETS_SETUP.md  DEPLOYMENT_GUIDE.md  SETUP_INSTRUCTIONS.md  cloudflare-worker.js  (+8 more)
(+95 files in other folders)
