[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "asyncio-throttle>=1.0.2",
    "beautifulsoup4>=4.13.4",
    "google-generativeai>=0.8.5",
    "langcodes>=3.5.0",
    "langdetect>=1.0.9",
    "lxml>=6.0.0",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
